# ukbinday

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  HANDPORT_PLAN.md  README.md  badge_coverage.json  bin_collection_scraper_spec.md  bin_scraper.py  biome.json  council_bin_config.yaml  docker-compose.yml  goaccess.conf  lefthook.yaml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/docs/: address_lookup.md  api_spec.md  deployment_spec.md  improvements.md  input-json-driven-sync.md  production-readiness.md  robbrad_integration.md  selenium_to_playwright.md  stale-scraper-cleanup.md
.github/workflows/: deploy.yml  scraper_sync.yml.disable
.pre-commit-scripts/: README.md
UKBinCollectionData/: bin_to_ics.py  conftest.py  pyproject.toml
UKBinCollectionData/custom_components/uk_bin_collection/: __init__.py  calendar.py  config_flow.py  const.py  sensor.py
UKBinCollectionData/custom_components/uk_bin_collection/tests/: common_utils.py  test_config_flow.py  test_init.py  test_sensor.py
UKBinCollectionData/scripts/: check_ha_compatibility.py
UKBinCollectionData/uk_bin_collection/tests/: test_collect_data.py  test_common_functions.py  test_conftest.py  test_get_data.py
UKBinCollectionData/uk_bin_collection/tests/request_logs/: AberdeenCityCouncil.json  AberdeenshireCouncil.json  AdurAndWorthingCouncils.json  AmberValleyBoroughCouncil.json  AngusCouncil.json  AntrimAndNewtonabbeyCouncil.json  ArdsAndNorthDownCouncil.json  ArgyllandButeCouncil.json  ArmaghBanbridgeCraigavonCouncil.json  ArunCouncil.json  AshfieldDistrictCouncil.json  AshfordBoroughCouncil.json  BCPCouncil.json  BaberghDistrictCouncil.json  BarkingDagenham.json  BasildonCouncil.json  BathAndNorthEastSomersetCouncil.json  BedfordshireCouncil.json  BelfastCityCouncil.json  BlabyDistrictCouncil.json
UKBinCollectionData/uk_bin_collection/tests/step_defs/: test_validate_council.py
UKBinCollectionData/uk_bin_collection/uk_bin_collection/: common.py  get_bin_data.py
UKBinCollectionData/uk_bin_collection/uk_bin_collection/councils/: AberdeenCityCouncil.py  AberdeenshireCouncil.py  AmberValleyBoroughCouncil.py  AngusCouncil.py  AntrimAndNewtonabbeyCouncil.py  ArgyllandButeCouncil.py  ArmaghBanbridgeCraigavonCouncil.py  ArunCouncil.py  AshfieldDistrictCouncil.py  AshfordBoroughCouncil.py  BCPCouncil.py  BaberghDistrictCouncil.py  BarkingDagenham.py  BarnetCouncil.py  BasildonCouncil.py  BathAndNorthEastSomersetCouncil.py  BedfordBoroughCouncil.py  BelfastCityCouncil.py  BexleyCouncil.py  BirminghamCityCouncil.py  BlabyDistrictCouncil.py  BlackburnCouncil.py  BlackpoolCouncil.py  BlaenauGwentCountyBoroughCouncil.py  BolsoverCouncil.py  BoltonCouncil.py  BostonBoroughCouncil.py  BracknellForestCouncil.py  BraintreeDistrictCouncil.py  BrecklandCouncil.py  BrightonandHoveCityCouncil.py  BroadlandDistrictCouncil.py  BromleyBoroughCouncil.py  BromsgroveDistrictCouncil.py  BroxbourneCouncil.py  BuckinghamshireCouncil.py  BurnleyBoroughCouncil.py  BuryCouncil.py  CalderdaleCouncil.py  CambridgeCityCouncil.py  (+203 more)
UKBinCollectionData/uk_bin_collection/uk_bin_collection/councils/tests/: conftest.py  test_south_kesteven_district_council.py  test_south_kesteven_integration.py
UKBinCollectionData/uk_bin_collection_api_server/: server.py
api/: config.py  main.py  routes.py
api/compat/: curl_cffi_fallback.py
api/data/: admin_scraper_lookup.json  badge_coverage.json  disabled_scrapers.json  lad_lookup.json
api/routes/: lookup.py  meta.py
api/scrapers/: aberdeenshire_gov_uk.py  adur_worthing_gov_uk.py  allerdale_gov_uk.py  angus_gov_uk.py  antrimandnewtownabbey_gov_uk.py  ardsandnorthdown_gov_uk.py  armaghbanbridgecraigavon_gov_uk.py  arun_gov_uk.py  ashfield_gov_uk.py  ashford_gov_uk.py  basildon_gov_uk.py  basingstoke_gov_uk.py  bathnes_gov_uk.py  bcp_gov_uk.py  bedford_gov_uk.py  belfast_city_gov_uk.py  birmingham_gov_uk.py  blaby_gov_uk.py  blackburn_gov_uk.py  blackpool_gov_uk.py  bolsover_gov_uk.py  bradford_gov_uk.py  (+658 more)
bins-website/: COUNCIL_DATA_PATTERNS.md  PARSER_SUMMARY.md  README.md  index.html
data/: nspl.parquet  postcodes_by_council.csv
deploy/: deployment.md  deployment.py
extraction/: 01_extract_info.py  02_playwright_run.py  03_analyze_network_logs.py  04_yaml_conversion.py  05_check_cors.py  analyze_network_logs.py  check_cors.py  extract_info.py  yaml_conversion.py
monkey_patch/: conftest.py  setup.sh
pipeline/: overrides.json  shared.py  sync.sh  sync_all.py
scripts/: annotate_lad_working.py  generate_admin_lookup.py  generate_coverage_map.py  generate_disabled_list.py  generate_sankey.py  post_integration.sh
src/: __init__.py  bin_lookup.py  cleanup_failures.py  household_waste_info.py  main.py  models.py  prompts.py  pydantic_agent.py  run_single_council.py  scraping_councils.py  uprn_lookup.py
tests/: README.md  conftest.py  integration_output.json  parser-test.html  playwright_output.json  playwright_profile.json  profile_playwright.py  test_api_scrapers.py  test_bins_website.js  test_cases.json  test_ci.py  test_deploy.py  test_deploy_docker.sh  test_frontend.py  test_frontend_flow.py  test_integration.py  test_output.json  test_playwright.py
(+1212 files in other folders)
