[project]
name = "bins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.5",
    "curl-cffi>=0.14.0",
    "fastapi>=0.135.1",
    "hcloud>=2.17.1",
    "httpx>=0.28.1",
    "ibis-framework[duckdb]>=12.0.0",
    "icalendar>=7.0.3",
    "icalevents>=0.1.27",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "paramiko>=4.0.0",
    "pypdf>=6.9.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=7.3.0",
    "requests>=2.32.0",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "lefthook>=2.1.4",
]

[tool.ruff]
exclude = ["api/scrapers"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
